<resources>
    <string name="app_name">Assigment2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tape_name_here">Type Name Here</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="lorem1">This is app for suite media mobile developer test</string>
    <string name="choose_guest">Choose Guest</string>
    <string name="choose_event">Choose Event</string>
    <string name="hallo">Hallo,</string>
    <string name="copyright">Copyright © Suitmedia All rights reserved.</string>
    <string name="event">EVENT</string>
    <string name="guests">GUESTS</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYmltYWJrIiwiYSI6ImNsMHh3OTl2bDBjNXYzY2sxOWs2ZjUwNGwifQ.HMhgWpZhx__jw7FzzIptRQ</string>
    <string name="check">check</string>
    <string name="type_the_text_palindrome">Type the text palindrome</string>
</resources>